--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,7 @@
             </div>
         </div>
     </section>
-    <!-- <section class="skills" id="skills">
+    <section class="skills" id="skills">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Навики</h2>
             <div class="title title_fz36 title__section-subtitle">Що я використовую в роботі</div>
@@ -405,7 +405,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- <section class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Портфоліо</h2>
