--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,11 @@
         <div class="container">
             <div class="about__wrapper">
                 <div class="about__photo">
-                    <img src="img/main_photo.jpg" alt="my photo">
+                   <picture>
+                        <source media="(max-width: 567px)" srcset="img/main_photo-mini.jpg 1.5x">
+                        <source media="(min-width: 568px)" srcset="img/main_photo.jpg">
+                        <img src="img/main_photo.jpg" alt="my photo">
+                   </picture>
                 </div>
                 <div class="about__descr">
                     <h2 class="title title_fz16 about__title">Про мене</h2>
@@ -406,7 +410,7 @@
             </div>
         </div>
     </section>
-    <!-- <section class="portfolio" id="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Портфоліо</h2>
             <div class="title title_fz36 title__section-subtitle">Мої роботи</div>
@@ -432,8 +436,8 @@
                 </a>
             </div>
         </div>
-    </section> -->
-    <!-- <section class="price-list" id="price">
+    </section>
+    <section class="price-list" id="price">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Прайс-лист</h2>
             <div class="divider"></div>
@@ -470,8 +474,8 @@
                 </div>
             </div>
         </div>
-    </section> -->
-    <!-- <section class="contacts" id="contacts">
+    </section>
+    <section class="contacts" id="contacts">
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__photo">
@@ -520,7 +524,7 @@
                 </div>
             </div>
         </div>
-    </section> --> 
+    </section> 
     <script src="js/script.js"></script>
 </body>
 </html>
